log/build_2026-01-28_17-53-14/motor_control/stderr.log
  File "/home/raspi-earth/project_ws/install/motor_control/lib/python3.11/site-packages/motor_control/joint1_node.py", line 31
    KD = 0.01      
              ^
SyntaxError: invalid non-printable character U+00A0

